# snp2le

./: .designinit  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  snp2le.spec
converter/: README.md  app.py  cli.py  snp2le.spec
converter/core/: __init__.py  dc.py  engine.py  io.py  ir.py  mna.py  netlist.py  pdk.py  state.py  units.py  universal.py  xschem.py
converter/examples/: balun_ihp-sg13cmos5l.s4p  ind_d20_w7_sp3_nw1_r10_fit.sp  ind_d20_w7_sp3_nw1_r10_ihp-sg13g2.s2p  ind_demo.s2p  mim_cap_170fF_ihp-sg13g2.s2p  sample_inductor_ihp-sg13g2.s2p  six-port_ihp-sg13g2.s7p  tf_octa_c_ports_spaced_ports_1_dc_deembedded_ihp-sg13g2.s6p  tf_octa_n_d40_w5_sp3_nw2_fs7_f1_r10.s6p
converter/gui/: combobox_style.py  design_view.py  footer.py  help_dialog.py  main_window.py  mpl_style.py  plot_view.py  schematic_widget.py  style.py  top_bar.py  widgets.py
converter/tests/: test_core.py
converter/tools/: make_icon.py  make_logos.py
doc/: architecture.md
doc/img/: README.md
netlist/spectre/: bpf_le.inc  bpf_le.scs  four_port.inc  syntax_cheatsheet.inc  three_port.inc  two_port.inc
netlist/spice/: bpf_le.spice  four_port.spice  seven_port.spice  third_port.spice  three_port.spice  two_port.spice
schematic/xschem/: bpf_le.sym  eight-port.sym  five-port.sym  four_port.sym  (+5 more)
sim_data/: bpf_le_tb_acsp_ngspice.txt  bpf_le_tb_noise_ngspice.txt  four_port_tb_acsp_ngspice.txt  three_port_tb_acsp_ngspice.txt  three_port_tb_acsp_vacask.txt  two_port_tb_acsp_ngspice.txt  two_port_tb_acsp_vacask.txt
snp2le/: __init__.py  __main__.py  app.py  cli.py
tests/: test_core.py  test_qt_essentials.py  test_xschem.py
tools/: make_icon.py  make_logos.py
(+58 files in other folders)
