[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snp2le"
version = "0.1.4"
description = "Convert Touchstone S-parameter files into lumped-element netlists for Ngspice and VACASK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Simon Dorrer", email = "simon.dorrer@jku.at" }]
keywords = [
    "EDA", "S-parameters", "Touchstone", "SPICE", "ngspice", "VACASK",
    "vector-fitting", "macromodel", "RF", "microwave",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6>=6.6",
    "scikit-rf>=1.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "schemdraw>=0.18",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/iic-jku/snp2le"
Repository = "https://github.com/iic-jku/snp2le"
Issues = "https://github.com/iic-jku/snp2le/issues"

[project.scripts]
snp2le = "snp2le.__main__:main"

[tool.setuptools.packages.find]
include = ["snp2le*"]

[tool.setuptools.package-data]
"snp2le.gui" = ["assets/*"]
"snp2le" = ["examples/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
